bootstrap/kubernetes/apps/1-demo/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: block-buster
  name: block-buster-service
  namespace: 1-demo
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
      nodePort: 30001
  selector:
    app: block-buster
    version: 7.1.0
    env: dev
  type: NodePort
