bootstrap/kubernetes/apps/1-demo/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: block-buster-ingress
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.tls.certresolver: le
spec:
  rules:
    - host: block-buster.synergia-it.ar
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: block-buster
                port:
                  number: 80
